--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,9 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  <script async defer data-domain="mentor-fall2021-openqasm.github.io" src="https://plausible.suau.me/js/plausible.js"></script>
+
+  
   {% if page.layout == 'home' or page.layout == 'post' %}
 
     <!-- i18n for `_javascript/utils/timeago.js` -->
